Fixing the overlapping text from slider card

--- a/src/components/ProductSlider/ProductSlider.module.scss
+++ b/src/components/ProductSlider/ProductSlider.module.scss
@@ -29,8 +29,8 @@
     z-index: 0;
 
     @include respond("sm") {
-      max-height: 16rem;
-      min-height: 16rem;
+      max-height: 18rem;
+      min-height: 18rem;
       max-width: 140px;
       padding: 0.75rem;
       margin: 0 0.5rem;
@@ -64,7 +64,7 @@
       min-height: 3rem;
       text-align: center;
       display: -webkit-box;
-      -webkit-line-clamp: 2; 
+      -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       @include respond("md") {
         font-size: 1.5rem;
